Frontend of Platform AlmaConnX is Done

--- a/AlmaX/.gitignore
+++ b/AlmaX/.gitignore
@@ -6,9 +6,12 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+firebaseConfig.js*
 
 node_modules
 dist
+.env
+
 dist-ssr
 *.local
 
