--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AdarshDalai/AlmaConnX#readme",
   "dependencies": {
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
